RStoolbox 0.1.2
=====================================
New model for superClass: maximum likelihood classification (model = "mlc")

RStoolbox 0.1.1
=====================================
Added kernlab to suggested packages to be able to test \donttest{} examples

RStoolbox 0.1.0
=====================================
Initial release to CRAN (2015-09-05) with the following functions: 
 * classifyQA()
 * cloudMask()
 * cloudShadowMask()
 * coregisterImages()
 * decodeQA()
 * encodeQA()
 * estimateHaze()
 * fortify.raster()
 * fCover()
 * getMeta()
 * ggR()
 * ggRGB()
 * histMatch()
 * ImageMetaData()
 * normImage()
 * panSharpen()
 * pifMatch()
 * radCor()
 * rasterCVA()
 * rasterEntropy()
 * rasterPCA()
 * readEE()
 * readMeta()
 * readRSTBX()
 * readSLI()
 * rescaleImage()
 * rsOpts()
 * sam()
 * saveRSTBX()
 * spectralIndices()
 * stackMeta()
 * superClass()
 * tasseledCap()
 * topCor()
 * unsuperClass()
 * writeSLI() 
 
Included example data sets: 
* data(srtm)
* data(lsat)
* data(rlogo)

