@@ -67,6 +67,7 @@ importFrom(parallel,parSapply)
 importFrom(stats,approxfun)
 importFrom(stats,coefficients)
 importFrom(stats,complete.cases)
+importFrom(stats,cov)
 importFrom(stats,ecdf)
 importFrom(stats,kmeans)
 importFrom(stats,knots)
