@@ -9,8 +9,8 @@ entropyCpp <- function(x) {
     .Call('RStoolbox_entropyCpp', PACKAGE = 'RStoolbox', x)
 }
 
-gainOffsetRescale <- function(x, g, o) {
-    .Call('RStoolbox_gainOffsetRescale', PACKAGE = 'RStoolbox', x, g, o)
+gainOffsetRescale <- function(x, g, o, clamp) {
+    .Call('RStoolbox_gainOffsetRescale', PACKAGE = 'RStoolbox', x, g, o, clamp)
 }
 
 normImageCpp <- function(x, M, S) {
